# edge-channel-suite-sdk

./: AI_AGENT_GUIDE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEVELOPMENT_STATUS.md  ENTERPRISE_GRADE_ANALYSIS.md  FINAL_AUDIT_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  PARITY_ACHIEVEMENT.md  PRD_COMPLIANCE_ANALYSIS.md  PRD_COMPLIANCE_VERIFICATION.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_STATUS_FINAL.md  PUBLISHING.md  PUBLISHING_SETUP_COMPLETE.md  QUICK_PUBLISH.md  README.md  TESTING_VERIFICATION_REPORT.md  TODO.md  TYPESCRIPT_SDK_COMPLETE.md  VERIFICATION_CHECKLIST.md  WARP.md  main_sdk.py
.github/workflows/: publish.yml  python-ci.yml
examples/: NOTEBOOKS_UPDATE_SUMMARY.md  PACKAGE_USAGE_GUIDE.md  PAPERMILL_USAGE.md  README.md  README_NOTEBOOKS.md
examples/javascript/: export_example.js  import_example.js
examples/python/: collectionsExport.ipynb  collectionsImport.ipynb  export_example.py  import_example.py  productsExport.ipynb  productsExportSDK.ipynb  productsImport.ipynb  productsImportSDK.ipynb
js-sdk/: .npmignore  COMPLETION_STATUS.md  README.md  jest.config.js  package-lock.json  package.json
js-sdk/examples/: README.md  n8n-example.js  vercel-api-example.ts
js-sdk/src/: index.ts
js-sdk/src/core/: types.ts
js-sdk/src/core/parsers/: csv.ts  index.ts  json.ts  xlsx.ts  xml.ts
js-sdk/src/export/: builders.ts
js-sdk/src/pipelines/: orchestrator.ts
js-sdk/src/transformations/: conditional.ts  date.ts  engine.ts  index.ts  list.ts  numeric.ts  operations.ts  string.ts  text.ts  utility.ts
js-sdk/src/validation/: engine.ts  index.ts  rules.ts
js-sdk/tests/: integration.test.ts  transformations.test.ts  validation.test.ts
python-sdk/: MANIFEST.in  README.md  pyproject.toml
python-sdk/saastify_edge/: __init__.py
python-sdk/saastify_edge/core/: types.py
python-sdk/saastify_edge/core/loaders/: __init__.py  file_loaders.py
python-sdk/saastify_edge/core/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  factory.py  json_parser.py  xml_parser.py
python-sdk/saastify_edge/db/: README.md  __init__.py  completeness_cache.py  config.py  job_manager.py  mock_db_client.py  postgres_client.py
python-sdk/saastify_edge/export/: __init__.py  file_builders.py  orchestrator.py
python-sdk/saastify_edge/import_pipeline/: __init__.py  batch_processor.py  orchestrator.py  template_mapper.py
python-sdk/saastify_edge/transformations/: __init__.py  advanced_operations.py  engine.py  operations.py
python-sdk/saastify_edge/utils/: __init__.py  logging.py  metrics.py  prometheus.py  sanitization.py  template_schema.py
python-sdk/saastify_edge/validation/: __init__.py  engine.py  rules.py
python-sdk/test_data/: sample_products.csv
python-sdk/tests/: test_integration_pipelines.py  test_parsers_validation.py  test_transformations.py
scripts/: bump_version.sh  publish_npm.sh  publish_python.sh  release.sh
specs/: transformation_registry.json  validation_rules.json
