[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "saastify-edge-sdk"
version = "1.0.0"
description = "SaaStify Edge SDK - Product data transformation and import/export framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SaaStify Team", email = "support@saastify.ai"}
]
maintainers = [
    {name = "SaaStify Team", email = "support@saastify.ai"}
]
keywords = [
    "saastify",
    "edge",
    "catalog",
    "transformation",
    "validation",
    "import",
    "export",
    "ecommerce",
    "amazon",
    "shopify",
    "flipkart",
    "product-data",
    "data-pipeline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/demystify-systems/edge-channel-suite-sdk"
Documentation = "https://github.com/demystify-systems/edge-channel-suite-sdk/tree/main/docs"
Repository = "https://github.com/demystify-systems/edge-channel-suite-sdk"
Issues = "https://github.com/demystify-systems/edge-channel-suite-sdk/issues"
Changelog = "https://github.com/demystify-systems/edge-channel-suite-sdk/blob/main/CHANGELOG.md"

dependencies = [
    "aiohttp>=3.8.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "mypy>=0.990",
    "black>=22.0.0",
    "ruff>=0.0.250",
]

[tool.setuptools]
packages = ["saastify_edge"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
